ADD: search input and footer

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,12 @@
     --red-color: #D42026;
 }
 
+*, *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
