--- a/css/search.css
+++ b/css/search.css
@@ -17,3 +17,9 @@
     border: 1px solid #A5A5A5;
     border-radius: 4px;
 }
+
+@media (max-width: 490px) {
+    .search input {
+        width: 100%;
+    }
+}
