--- a/css/search.css
+++ b/css/search.css
@@ -16,6 +16,8 @@
     height: 31px;
     border: 1px solid #A5A5A5;
     border-radius: 4px;
+    font-size: 16px;
+    padding: 0 8px;
 }
 
 @media (max-width: 490px) {
