--- a/css/modal.css
+++ b/css/modal.css
@@ -9,6 +9,7 @@
     visibility: hidden;
     transform: scale(1.1);
     transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+    z-index: 2;
 }
 
 .modal-content {
@@ -19,7 +20,7 @@
     background-color: white;
     width: 800px;
     border-radius: 8px;
-    height: 600px;
+    height: 575px;
     background-color: #e7e7e7;
 }
 
@@ -124,11 +125,11 @@ h5::-webkit-scrollbar-thumb {
     font-weight: 400;
 }
 
-.details h3:last-child {
+.details h3.rank {
     width: 120px;
 }
 
-.details h3:first-child {
+.details h3.title {
     width: 430px;
 }
 
@@ -145,4 +146,67 @@ h5::-webkit-scrollbar-thumb {
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+@media(max-width: 900px) {
+    .list {
+        padding: 5px;
+    }
+
+    .list-item {
+        margin-bottom: 5px;
+    }
+
+    .list-item img {
+        height: 60px;
+        width: 60px;
+        min-height: 60px;
+        min-width: 60px;
+    }
+
+    .modal-content {
+        width: 400px;
+        top: 50%;
+    }
+
+    .details h3.rank {
+        display: none;
+    }
+
+    .details h3.title {
+        width: 270px;
+    }
+}
+
+@media(max-width: 430px) {
+    .modal-content {
+        width: 300px;
+        height: 400px;
+    }
+
+    .modal-header h2 {
+        margin: 4px;
+    }
+
+    .list {
+        height: 350px;
+    }
+
+    .list-item {
+        padding: 8px;
+    }
+
+    .details {
+        padding-left: 8px;
+        width: 190px;
+    }
+
+    h3.title {
+        width: 190px;
+        font-size: 16px;
+    }
+
+    h5 {
+        font-size: 12px;
+    }
 }
