--- a/css/modal.css
+++ b/css/modal.css
@@ -38,6 +38,9 @@
 .modal-header h2 {
     order: 1;
     font-weight: 400;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .close-button {
@@ -54,7 +57,7 @@
 .list {
     padding: 40px 30px 28px;
     overflow-y: auto;
-    height: 500px;
+    height: 450px;
 }
 
 .list h2 {
@@ -148,6 +151,51 @@ h5::-webkit-scrollbar-thumb {
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
+.midias-button {
+    font-weight: 400;
+    color: #6c757d;
+    cursor: pointer;
+    text-align: center;
+    background-color: transparent;
+    border: 1px solid #6c757d;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 8px;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    outline: none;
+    margin: 8px auto;
+    display: inherit;
+}
+
+.midias-button:disabled {
+    cursor: not-allowed;
+}
+
+.midias-button:not(:disabled):hover {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+.spinner-border {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    vertical-align: text-bottom;
+    border: .2em solid currentColor;
+    border-right-color: transparent;
+    border-radius: 50%;
+    animation: spinner-border .75s linear infinite;
+    margin-left: 10px;
+}
+
+@keyframes spinner-border {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 @media(max-width: 900px) {
     .list {
         padding: 5px;
@@ -189,7 +237,7 @@ h5::-webkit-scrollbar-thumb {
     }
 
     .list {
-        height: 350px;
+        height: 300px;
     }
 
     .list-item {
