--- a/css/table.css
+++ b/css/table.css
@@ -30,6 +30,7 @@ th:last-child {
 tr.character {
     cursor: pointer;
     border-bottom: 3px solid rgba(212, 32, 38, 0.2);
+    height: 112px;
 }
 
 tr.character:hover {
@@ -78,6 +79,10 @@ tr.character:hover {
 @media (max-width: 700px) {
     div.table {
         margin: 0;
+    }
+
+    .character td {
+        padding: 18px 16px;
     }
 
     th:first-child {
